@@ -178,8 +178,6 @@ static CallMap s_callMap {
                            {{SSA, 0}}},
     {LdFuncCachedU,      (TCA)FixedFuncCache::lookupUnknownFunc, DSSA, SSync,
                            {{SSA, 0}}},
-    {CreateCl,           (TCA)createClHelper, DSSA, SSync,
-                          {{SSA, 0}, {SSA, 1}, {SSA, 2}, {SSA, 3}}},
     {ArrayIdx,           {FSSA, 0}, DTV, SSync,
                            {{SSA, 1}, {SSA, 2}, {TV, 3}}},
 
