@@ -5,6 +5,7 @@ Future (next release):
   - Implement RecursiveArrayIterator
   - Implement php_strip_whitespace()
   - Support for timeouts in cli mode
+  - Closure allocation optimizations (~2x faster to allocate a closure)
 
 "Tamale" 7/22/2013
   - Optimize vector-shaped Arrays (arrays with keys in range 0..size-1)
